[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/mushroom-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sfx/walk.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/jump2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/hurt.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump_down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump_up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.3
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Walk:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.075, 0.225 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 7 )

[node name="Player" type="KinematicBody2D"]
z_index = 3
collision_layer = 0
script = ExtResource( 2 )
horizontal_speed = 8.0
jump_height = 200.0
fall_speed = 10.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump_down = SubResource( 9 )
anims/jump_up = SubResource( 8 )
anims/walk = SubResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="JumpBuffer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="JumpBuffer"]
position = Vector2( 0, 14 )
shape = SubResource( 10 )

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 16

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -2 )
shape = SubResource( 11 )

[node name="Walk" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 8 )
stream = ExtResource( 3 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 8 )
stream = ExtResource( 4 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="JumpBuffer" to="." method="_on_JumpBuffer_body_entered"]
[connection signal="body_exited" from="JumpBuffer" to="." method="_on_JumpBuffer_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
